// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValue has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            name="keyValueLabelkeyValue"
            type="text"
            value=""
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value=""
        />
      </div>
    </fieldset>
    <span
      class="form-text"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`KeyValue has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <legend>
        <p
          class="ddm-label"
        >
          label
        </p>
      </legend>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            name="keyValueLabelkeyValue"
            type="text"
            value=""
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value=""
        />
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`KeyValue has a predefined Value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            name="keyValueLabelkeyValue"
            placeholder="Option 1"
            type="text"
            value=""
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value=""
        />
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`KeyValue has a value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            name="keyValueLabelkeyValue"
            type="text"
            value="value"
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value=""
        />
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`KeyValue has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            name="keyValueLabelkeyValue"
            type="text"
            value=""
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value=""
        />
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`KeyValue is not editable 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            disabled=""
            name="keyValueLabelkeyValue"
            type="text"
            value=""
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value=""
        />
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`KeyValue is not required 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            name="keyValueLabelkeyValue"
            type="text"
            value=""
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value=""
        />
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`KeyValue renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <legend>
        <p
          class="ddm-label"
        >
          text
        </p>
      </legend>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            name="keyValueLabelkeyValue"
            type="text"
            value=""
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value=""
        />
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`KeyValue renders component with a key 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="keyValue"
  >
    <fieldset>
      <div
        class="form-group hide"
        data-field-name="keyValueLabelkeyValue"
      >
        <fieldset>
          <input
            aria-label="text"
            class="form-control ddm-field-text"
            name="keyValueLabelkeyValue"
            type="text"
            value=""
          />
        </fieldset>
      </div>
      <div
        class="active form-text key-value-editor"
      >
        <label
          class="control-label key-value-label"
        >
          field-id
          :
        </label>
        <input
          class="key-value-input"
          type="text"
          value="key"
        />
      </div>
    </fieldset>
  </div>
</div>
`;
